--- a/bin/main/templates/home.html
+++ b/bin/main/templates/home.html
@@ -18,6 +18,7 @@
    		
    		<h1>Welcome to Mobile Subscriber Info Service</h1>
    		
+   		<a class="btn btn-primary" href="secure" role="button">Check Info</a>
    	</div>
    	
    
