--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -15,6 +15,20 @@
    <div class="container">
    	
    	<div class="jumbotron">
+   	
+   	
+
+   	<div class="container">
+	<nav class="navbar navbar-default" role="navigation">
+	<div class="container">
+    <span class="navbar-brand"></span>
+    <a class="btn navbar-btn btn-danger navbar-right pull-right" role="button" href="/logout">Logout</a>
+	</div>
+	</nav>
+   		
+   	
+   	
+   
    	<h1>Check MSISDN</h1>
    	
    	
@@ -39,6 +53,8 @@
    	
    		
    		
+
+   		
    		
    <form class="form-inline" action="#" th:action="@{/api/}" th:formmethod="POST">
   <div class="form-group mx-sm-3 mb-2">
@@ -47,6 +63,16 @@
   </div>
   <button type="submit" class="btn btn-primary mb-2">Check</button>
   </form>
+   		
+   		
+   		
+   		
+   		
+   		
+   		
+ 
+   		
+   		
    		
 
    		
@@ -82,13 +108,9 @@
         </table>
     </div>
    
+
    
-   
-   
-   
-   
-   
-   
+
    
    
    </div>
